# pit

./: .pre-commit-config.yaml  .pylintrc  README.md  SECURITY.md  blank.txt  main.py  pyproject.toml  ruff.toml
.github/: CODEOWNERS  SECURITY.md
.github/ISSUE_TEMPLATE/: petición-sugerencia-de-funcionalidad-.md  reporte-de-bug.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/: folder_structure.txt
src/pit/cli/: add.py  commit.py  history.py  init.py  main.py  status.py
src/pit/core/: commit.py  status.py
src/pit/storage/: add.py  database.py  init.py  remove.py
tests/unit/: init.py  test_add.py  test_remove.py  test_status.py
